@@ -180,9 +180,14 @@ Interpreter::setCurrentModule(const Vector<Token>& moduleExpr, int start)
 	      setCurrentModule(m);
 	      return true;
 	    }
+	  IssueWarning(LineNumber(moduleExpr[start].lineNumber()) <<
+		       ": no module " << QUOTE(moduleExpr[start]) << '.');
 	}
-      IssueWarning(LineNumber(moduleExpr[0].lineNumber()) <<
-		   ": no module " << QUOTE(moduleExpr) << '.');
+      else 
+	{
+	  IssueWarning(LineNumber(moduleExpr[start].lineNumber()) <<
+		       ": module expressions not supported in commands.");
+	}
       return false;
     }
  bad:
